feat  : Update activty

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.CRUDTask"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.UpdateActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.SelectedBrandActivity"
             android:exported="false" />
         <activity
@@ -29,7 +32,7 @@
             android:name=".ui.activity.vechileActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
